# gbam

./: .gitignore  .guix-build  Cargo.toml  LICENSE  README.md  benchmark_codecs.py  benchmarking.bash  codec_benchmark_results.csv  codec_map.json  minimal_parser.py  test.sh  test_python_ffi.py
.github/workflows/: main.yml  rust.yml
bam_tools/: Cargo.toml
bam_tools/src/: block.rs  gz.rs  lib.rs  reader.rs  util.rs  virtual_position.rs
bam_tools/src/reader/: readahead.rs  records.rs
bam_tools/src/record/: bamrawrecord.rs  fields.rs  tags.rs
bam_tools/src/sorting/: comparators.rs  flags.rs  sort.rs
benchmarking/: benchmark_result.md
c_api/: Cargo.toml  api.h  gbam_cffi.py
c_api/inc/: api.h
c_api/src/: lib.rs
c_api/test/: test.c
c_attempt/: basic_test.sh  codec_map.json  defs.h  main.c  makefile  meta.h  reader.c  utils.h  writer.c
gbam-binary/: Cargo.toml
gbam-binary/src/: main.rs
gbam-tools/: Cargo.toml
gbam-tools/src/: bam_to_gbam.rs  compression.rs  lib.rs  meta.rs  reader.rs  rowgroup.rs  writer.rs  writer_single_thread.rs
gbam-tools/src/single_thread/: meta.rs  mod.rs  reader.rs  writer.rs
gbam_binary/: Cargo.toml
gbam_binary/src/: main.rs
gbam_python/: bam_to_gbam.py  bam_to_gbam_stream.py  bam_to_sorted_gbam.py  benchmark_test.py  gbam_to_bam.py  huffman_encoder.py  main.py  preprocess.py  readme.md  requirements.txt  sorted_gbam_to_bam.py  stream_gbam_to_bam.py
gbam_python/test_data/: compression_benchmark.csv
gbam_tools/: Cargo.toml
gbam_tools/gbam_tools/: test_python_ffi.py
gbam_tools/src/: bam_to_gbam.rs  compression.rs  compressor.rs  lib.rs  meta.rs  readahead.rs  reader.rs  record.rs  rowgroup.rs  sam_tools.rs  stats.rs  tags.rs  writer.rs
gbam_tools/src/bam/: bam_to_gbam.rs  bamrawrecord.rs  gbam_to_bam.rs  tags.rs
gbam_tools/src/c_api/: api.rs
gbam_tools/src/query/: cigar.rs  depth.rs  flagstat.rs  int2str.rs
gbam_tools/src/query/markdup/: markdup.rs  sorted_storage.rs
gbam_tools/src/reader/: column.rs  old_reader.rs  parse_tmplt.rs  reader.rs  record.rs  records.rs
gbam_tools/src/single_thread/: meta.rs  mod.rs  reader.rs  writer.rs
gbam_tools/src/utils/: bed.rs
test_data/: 100recs.bam  compression_lgo_c1.txt  compression_log.txt
tests/: Cargo.toml  benchmark.py  build.rs  build_test.sh  conftest.py  test_conversions.py
tests/inc/: api.h
tests/src/: test.c
