[package]
name = "gbam-binary"
version = "0.1.0"
authors = ["nickroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles-bgzf = { path = "/noodles-parallel-experiment/noodles-bgzf" }
gbam-tools = { path = "../gbam-tools" }
byteorder = "1.2.3"
