[package]
name = "gbam-tools"
version = "0.1.0"
authors = ["nickroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.5"
byteorder = "1.2.3"
flate2 = "1.0.1"
flume = "0.10.0"
num_cpus = "0.2"
noodles-bgzf = { path = "../noodles-parallel-experiment/noodles-bgzf" }
libc = "0.2.93"
serde_json = "1.0"
serde = {version = "1.0.125", features = ["derive"]}

[lib]
crate-type = ["rlib", "cdylib"]

