[package]
name = "gbam_binary"
version = "0.1.0"
authors = ["nickroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbam_tools = { path = "../gbam_tools"}
bam_tools = {  git = "https://github.com/NickRoz1/bam_parallel", branch = "feature/index_sort"}
byteorder = "1.2.3"
structopt = "0.3.21"
memmap2 = "0.3.0"
rayon = "1.7.0"