[package]
name = "gbam_tools"
version = "0.1.0"
authors = ["nickroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.1"
byteorder = "1.2.3"
bam_tools = {  path = "../bam_tools" }
libc = "0.2.93"
serde_json = "1.0"
serde = {version = "1.0.125", features = ["derive"]}
bincode = "1.3.3"
crc32fast = "1.2.1"
rayon = "1.7.0"
flume = "0.10.5"
memmap2 = "0.7.0"
rust-htslib = { version = "0.39.0", default-features = false }
itertools = "0.10.5"
lzzzz = "1.0.3"
bitflags = "2.0.2"
crossbeam = "0.8.2"
tempdir = "0.3.7"
md5 = "0.7.0"
rand = "0.8"
brotli = "3.3.4"
zstd = "0.12"

[lib]
crate-type = ["rlib"]

[package.metadata.maturin]
requires-dist = ["pysam==0.16.0.1"]